# vondelgym-booker

./: .gitignore  LICENSE  README.md  host.json  setup.cfg
azure_function/: __init__.py
src/vondel/: __init__.py  azure.py  classes.py  cli.py  parse_page.py  user.py  utils.py
tests/vondel/: conftest.py  test_parse_page.py
tests/vondel/data/: login.html
