[metadata]
name = vondel-booker
version = attr: vondel.__version__
author = Roy van Santen
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown
keywords = vondel, gym, booking
license = MIT license
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
package_dir=
  =src
install_requires =
  requests >= 2.0.0
  click >= 8.0.0

[options.extras_require]
dev = 
    pytest>=7.0.0, <8
azure = azure-functions

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    vondelgym-booker = vondel.cli:main

